@@ -3,114 +3,146 @@
  *
  * for adjusting build number for specific branch build
  * Jenkins.instance.getItemByFullName("myrobotlab-multibranch/develop").updateNextBuildNumber(185)
- *
+ * Cancel all jobs - Jenkins.instance.queue.clear()
  ***********************************************************************************/
-properties([buildDiscarder(logRotator(artifactDaysToKeepStr: '', artifactNumToKeepStr: '', daysToKeepStr: '', numToKeepStr: '3')), [$class: 'GithubProjectProperty', displayName: '', projectUrlStr: 'https://github.com/MyRobotLab/myrobotlab/'], pipelineTriggers([[$class: 'PeriodicFolderTrigger', interval: '2m']])])
+ 
+pipeline {
+   // https://plugins.jenkins.io/agent-server-parameter/
+   // agent { label params['agent-name'] }
+   agent any
 
-// node { // use any node
-
-node ('ubuntu') {  // use labels to direct build
-
-   // withEnv(javaEnv) {
-   
    parameters {
-        choice(
-            choices: ['true' , 'false'],
-            description: 'this is the description',
-            name: 'EXTENDED_VERIFY')
-    }
-   
-   
-   def mvnHome
-   stage('preparation') { // for display purposes
-   	  // initial clean - remove afte successful build
-      cleanWs() // - unless bootstrap is needed - cleanWS should be done at the end of the build 
-   
-      // Get some code from a GitHub repository
-      checkout scm
-      // checkout([$class: 'GitSCM', branches: [[name: '*/develop']], doGenerateSubmoduleConfigurations: false, extensions: [], submoduleCfg: [], userRemoteConfigs: [[url: 'https://github.com/MyRobotLab/myrobotlab.git']]])
-      // git 'https://github.com/MyRobotLab/myrobotlab.git'
-      // git url: 'https://github.com/MyRobotLab/myrobotlab.git', branch: 'develop'
-      
-      sh 'git rev-parse --abbrev-ref HEAD > GIT_BRANCH'
-      git_branch = readFile('GIT_BRANCH').trim()
-      echo git_branch
-    
-      sh 'git rev-parse HEAD > GIT_COMMIT'
-      git_commit = readFile('GIT_COMMIT').trim()
-      echo git_commit
-      
-      // Get the Maven tool.
-      // ** NOTE: This 'M3' Maven tool must be configured
-      // **       in the global configuration.           
-      mvnHome = tool 'M3'
-      
-      // env.JAVA_HOME="${tool 'Java8'}"
-      // env.PATH="${env.JAVA_HOME}/bin:${env.PATH}"
-      sh 'java -version'
-      echo sh(script: 'env|sort', returnStdout: true)
+      // agentParameter name:'agent-name'
+      choice(name: 'verify', choices: ['true', 'false'], description: 'verify')
+      choice(name: 'javadoc', choices: ['false', 'true'], description: 'build javadocs')
+      choice(name: 'githubPublish', choices: ['true', 'false'], description: 'publish to github')
+   // choice(choices: ['plan', 'apply -auto-approve', 'destroy -auto-approve'], description: 'terraform command for master branch', name: 'terraform_cmd')
    }
-   stage('compile') {
-      echo git_commit
-      echo "git_commit=$git_commit"
-      // Run the maven build
-      if (isUnix()) {
-      // -o == offline      
-         // sh "'${mvnHome}/bin/mvn' -Dbuild.number=${env.BUILD_NUMBER} -Dgit_commit=$git_commit -Dgit_branch=$git_branch -Dmaven.test.failure.ignore -q clean compile "
-         sh "'${mvnHome}/bin/mvn' -Dbuild.number=${env.BUILD_NUMBER} -Dmaven.test.failure.ignore -q clean compile "
-      } else {
-         // bat(/"${mvnHome}\bin\mvn" -Dbuild.number=${env.BUILD_NUMBER} -Dgit_commit=$git_commit -Dgit_branch=$git_branch -Dmaven.test.failure.ignore -q clean compile  /)
-         bat(/"${mvnHome}\bin\mvn" -Dbuild.number=${env.BUILD_NUMBER} -Dmaven.test.failure.ignore -q clean compile  /)
-      }
-   }
-   stage('verify'){
-	   if (isUnix()) {
-             // -o == offline
-	     sh "'${mvnHome}/bin/mvn' -Dfile.encoding=UTF-8 verify"
-	   } else {
-	     bat(/"${mvnHome}\bin\mvn" -Dfile.encoding=UTF-8 verify/)
-	   }
-   }
-   stage('extended-verify'){
-     if (params.EXTENDED_VERIFY == 'true') {
-       echo 'EXTENDED_VERIFY is true'
-     } 	   
-   }
-   stage('junit') {
-      junit '**/target/surefire-reports/TEST-*.xml'
-   }
-   stage('archive') {
-         // archiveArtifacts 'target/myrobotlab.jar'
-         archiveArtifacts 'target/myrobotlab.jar, target/surefire-reports/*, target/*.exec, site/*'
-   } 
-   stage('jacoco') {
-        jacoco()
-        // jacoco(execPattern: 'target/*.exec', classPattern: 'target/classes', sourcePattern: 'src/main/java', exclusionPattern: 'src/test*')
-        // jacoco(execPattern: '**/*.exec')
-   } 
-   stage('javadoc'){
-	   if (isUnix()) {
-	     sh "'${mvnHome}/bin/mvn' -q javadoc:javadoc"
-	   } else {
-	     bat(/"${mvnHome}\bin\mvn" -q javadoc:javadoc/)
-	   }
-   }
-   stage('publish') {
-   
-//    	def server = Artifactory.server 'artifactory01' 
-//    	def uploadSpec = """{
-// 								"files": [
-//										    {
-//										      "pattern": "target/myrobotlab.jar",
-//										      "target": "org/myrobotlab/"
-//										    }
-//										 ]
-//										}"""
-//		server.upload(uploadSpec)
 
-	}
-	
-	stage('clean') {
-		cleanWs() 
-	}
-}
+   // echo params.agentName
+   tools {
+      maven 'M3' // defined in global tools - maven is one of the only installers that works well for global tool
+   // jdk 'openjdk-11-linux' // defined in global tools
+   }
+
+   // JAVA_HOME="${tool 'openjdk-11-linux'}/jdk-11.0.1"
+   // JAVA_HOME="/home/jenkins/agent/tools/hudson.model.JDK/openjdk-11-linux/jdk-11.0.1"
+   environment {
+         MOTD = 'you know, for robots !'
+         VERSION_PREFIX = "1.1"
+         VERSION = "${VERSION_PREFIX}" + ".${BUILD_NUMBER}"
+         // MAVEN_OPTS = '-Xmx4096m -XX:MaxPermSize=256m -XX:+ExitOnOutOfMemoryError'
+   // JDK_HOME = "${tool 'openjdk-11-linux'}/jdk-11.0.1"
+   // JAVA_HOME = "${JDK_HOME}"
+   // PATH="${env.JAVA_HOME}/bin:${env.PATH}"
+   }
+
+   stages {
+         // using CleanBeforeCheckout - in configuration
+         // stage('clean') {
+         //    steps {
+         //       cleanWs()
+         //    }
+         // }
+
+      stage('initialize') {
+            steps {
+               echo "VERSION_PREFIX ${VERSION_PREFIX}"
+               echo "VERSION ${VERSION}"
+               echo "BUILD_NUMBER ${BUILD_NUMBER}"
+
+               print params['agent-name']
+               // print System.properties['os.name'].toLowerCase() - access to java object requires permission changes
+               script {
+                  sh '''
+                        git --version
+                        java -version
+                        mvn -version
+
+                     '''
+                  }
+               }
+        } // stage build
+
+   
+
+      // --fail-fast
+      // -DargLine="-Xmx1024m"
+      stage('maven package') {
+         steps {
+            script {
+               if (params.verify) {
+                  // If the verify parameter is true, skip the tests
+                  sh '''
+                     mvn -Dfile.encoding=UTF-8 -Dversion=${VERSION} clean package -DskipTests=true -q
+                  '''
+               } else {
+                  // Otherwise, run the default command with tests
+                  sh '''
+                     mvn -Dfile.encoding=UTF-8 -Dversion=${VERSION} clean package jacoco:report -q
+                  '''
+               }
+            }
+         }
+      }
+
+      stage('javadoc') {
+         when {
+                 expression { env.BRANCH_NAME == 'master' || env.BRANCH_NAME == 'develop' || params.javadoc == 'true' }
+         }
+         steps {
+                  sh '''
+                     mvn -q javadoc:javadoc
+                  '''
+            }
+      } // stage javadoc
+
+      stage('archive') {
+         // when {
+         //    expression { env.BRANCH_NAME != 'master' && env.BRANCH_NAME != 'develop' }
+         // }
+         steps {
+            archiveArtifacts 'target/**'
+         }
+      }
+
+      stage('publish-github') {
+         when { expression { env.BRANCH_NAME == 'master' || env.BRANCH_NAME == 'develop' } }
+         steps {
+            withCredentials([string(credentialsId: 'publish_token', variable: 'token')]) { // var name "token" is set in cred config and is case senstive
+               echo "publishing ${VERSION_PREFIX}.${BUILD_NUMBER}"
+               echo "version ${VERSION}"
+               // for security - your supposed to make it non-interpretive single quotes and let the OS process the interpolation
+               sh './publish-github.sh -v ${VERSION} -b ${BUILD_NUMBER} -t ${token}'
+            }
+         }
+      }
+   } // stages
+
+   post {
+
+      changed {  // success | aborted | unsuccessful
+         script {
+            echo 'build result is : ' + currentBuild.result
+            workyNoWorky = 'noWorky !'
+            if (currentBuild.result == 'SUCCESS'){
+               workyNoWorky = 'Worky !'
+            }
+
+            // Fetch the Discord webhook URL from the secure store
+            withCredentials([string(credentialsId: 'jenkins-discord-webhook', variable: 'DISCORD_WEBHOOK_URL')]) {
+                // Use the secure webhook URL for sending the message
+                discordSend description: workyNoWorky, footer: '', link: env.BUILD_URL, result: currentBuild.currentResult, title: JOB_NAME, webhookURL: DISCORD_WEBHOOK_URL
+            }            
+         }
+      }
+
+      always {
+            // publish junit
+            junit 'target/surefire-reports/**/*.xml'
+            // Publish JaCoCo coverage report
+            jacoco(execPattern: '**/target/jacoco.exec')
+      }
+
+  } // post
+} // pipeline
